fix(Tests): Fixed CRLF and removed some unnecessary tests